[package]
name = "chromacity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cfg-if = "1.0.0"
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.19"
tokio = { version = "1.29.1", features = ["full"] }
wgpu = "0.17.0"
winit = "0.28.6"
